--- a/astrogrid/datacenter/README
+++ b/astrogrid/datacenter/README
@@ -1,20 +1,60 @@
-AstroGrid DATACENTER README.
+#=============================================================================#
+#                    AstroGrid DATACENTER README.                             #
+#=============================================================================#
+
+
+1.0 SOFTWARE PREREQUISITES:
+***************************
+
+1.1 Externals.
+--------------
+
+These are the environments under which the datacenter was developed:
+. RedHat Linux 7.3 
+. Java sdk j2sdk1.4.1_02
+. Tomcat 4.1.24
+. Axis-1_1RC2
+
+You should also ensure the following are available:
+. junit 3.8.1 or later
+. log4j 1.2.4 or later
+
+We have only tested so far using Sybase as the database. The appropriate jdbc jar
+is included with the distribution. Further details are given later.
+
+***NOTE*** Sybase is not a prerequisite. Please try other jdbc compliant databases,
+or contact AstroGrid if you wish to try the roll-your-own variety given you have a 
+home-grown database!
+
+
+1.2 Internals.
+--------------
 
 Two important software prerequisites are the datacenter's two properties files:
 
 (1) The configuration file ASTROGRID_datasetconfig.properties. A great deal
 of setup-configurable data is held here. The file is well commented and bears
-reading.
+reading... <<<MUST>>> be read!
 
 (2) The datacenter's messages file ASTROGRID_datacentermessages.properties.
 All messages issued by the datacenter are detailed here. The file name is 
 configurable within the ASTROGRID_datasetconfig file.
 
-The datacenter package will not work without these files being available within
-Tomcat. BEWARE: we have had some difficulty with Tomcat picking up properties
-files.
+The datacenter package will not work without these files being available. 
 
-DATABASES.
+***Note*** The datacenter is dependent upon another AstroGrid component,
+the MySpace facility, which is separately installable. 
+Please install MySpace prior to installing the datacenter.
+
+Other prerequisites are included with the distribution. 
+See section 3.0 Install below.
+
+
+2.0 DATABASES:
+**************
+
+2.1 Overview of Databases.
+--------------------------
 
 The datacenter requires two types of database:
 
@@ -29,12 +69,14 @@ conventions, and hold billions of rows. Configurable details are held
 within the ASTROGRID_datasetconfig file.
 
 At the present state of play, we have only had the opportunity of testing
-using Sybase on the hydra machine.
+using Sybase.
 
-JNDI.
+
+2.2 JNDI.        **** IMPORTANT ****
+---------
 
 The datacenter uses JNDI to lookup it's associated databases, two files require 
-altering to enable this to happen:
+altering within Axis and Tomcat to enable this to happen:
 
 (1) The axis WEB.XML file - $CATALINA_HOME/webapps/axis/WEB-INF/web.xml:
 Add the JNDI names (as per ASTROGRID_datasetconfig.properties) under which the 
@@ -102,4 +144,68 @@ by JNDI (eg. driverClassName, URL, User, Password):
      
      .......
      </DefaultContext>
+     
+     
+3.0 INSTALL:
+************
 
+3.1 Unjar the datacenter.jar archive.
+-------------------------------------
+
+Unjar to some convenient temporary directory. The archive contains the following:
+
+. This README, so presumably you have already got this far!
+. datacenterBIN.jar     -    the datacenter executables
+. jconn2.jar            -    the Sybase jdbc executables
+. objectwiz-votable.jar -    executables for producing votables from a query
+. config directory      -    contains datacenter configuration files
+. dbscripts             -    contains script for creating database tables.
+. wsdd                  -    contains deployment descriptors for deploying datacenter as a SOAP service within Axis
+
+3.2 Make sure the external prerequisites are fullfilled.
+--------------------------------------------------------
+See section 1.1
+
+
+3.3 Copy archive files into appropriate classpath location for Axis.
+--------------------------------------------------------------------
+Suggest the best location is the webapps/axis/WEB-INF/lib directory
+that is created when Axis is installed, but any convenient place
+where they can be picked up as part of a classpath.
+
+
+3.4 READ THE DATACENTERS CONFIGURATION PROPERTIES FILE.
+-------------------------------------------------------
+Look in the config directory.
+
+
+3.4 Fullfill Database conditions.
+---------------------------------
+. Create appropriate astronomical databases (if not already in existence).
+. Create job database by running script held in dbscripts directory.
+  This may <<will>> require alteration for your flavour of RDBMS.
+. Alter Tomcat and Axis files to allow for JNDI (see section 2.2 above)
+
+
+3.5 Alter the datacenter's configuration file.
+----------------------------------------------
+. You must make appropriate database configuration details and other
+  items available by altering this file. ***Please read it***.
+. Place the configuration file and the messages file in a convenient
+  classpath-aware location. See section 3.3 above.
+
+
+3.6 Ensure Database, Tomcat and Axis are running.
+-------------------------------------------------
+You may have to restart Tomcat after step 3.4
+
+
+3.7 Deploy datacenter as a SOAP service within Axis.
+----------------------------------------------------
+See the wsdd descriptors within the wsdd directory.
+These are commented to show which command is required to execute deployment.
+The datacenterBIN.jar must be available when the command is executed. 
+
+
+3.8 You are ready to go! Happy Astronomical Hunting!
+----------------------------------------------------
