--- a/astrogrid/jes/README
+++ b/astrogrid/jes/README
@@ -1,13 +1,13 @@
 #=============================================================================#
-#                    AstroGrid JES README.                                    #
+#                    AstroGrid JES README.                     
 #=============================================================================#
 JES - Job Entry System
 
 1.0 SOFTWARE PREREQUISITES:
-***************************
+*****************************
 
 1.1 Externals.
---------------
+----------------
 
 These are the environments under which JES was developed:
 . RedHat Linux 7.3 
@@ -26,7 +26,7 @@ is included with the distribution. Further details are given later.
 
 
 1.2 Internals.
---------------
+----------------
 
 Two important software prerequisites are the datacenter's two properties files:
 
@@ -41,14 +41,14 @@ configurable within the ASTROGRID_jesconfig.properties file.
 The JES package will not work without these files being available. 
 
 Other prerequisites are included with the distribution. 
-See section 3.0 Install below.
+See section 4.0 Install below.
 
 
 2.0 DATABASES:
-**************
+****************
 
 2.1 Overview of Databases.
---------------------------
+----------------------------
 
 JES requires one database:
 
@@ -62,9 +62,7 @@ using Sybase on the hydra machine.
 
 
 2.2 JNDI.        **** IMPORTANT ****
----------
-
-JNDI.
+-----------
 
 JES uses JNDI to lookup it's associated database, two files require 
 altering to enable this to happen:
@@ -115,10 +113,27 @@ by JNDI (eg. driverClassName, URL, User, Password):
      </DefaultContext>
 
 
-3.0 INSTALL:
-************
+3.0 LIMITATIONS:
+******************
 
-3.1 Unjar the jes.jar archive.
+There are limitations on the query parameters that equate to
+the SQL submitted against an astronomical database. 
+The following are not yet supported:
+
+ORDER BY
+GROUP BY
+sub-selects
+column arithmetic
+ANY
+ALL
+
+Most if not all of these will be available shortly.
+
+
+4.0 INSTALL:
+**************
+
+4.1 Unjar the jes.jar archive.
 -------------------------------------
 
 Unjar to some convenient temporary directory. The archive contains the following:
@@ -130,45 +145,45 @@ Unjar to some convenient temporary directory. The archive contains the following
 . dbscripts             -    contains script for creating database tables.
 . wsdd                  -    contains deployment descriptors for deploying datacenter as a SOAP service within Axis
 
-3.2 Make sure the external prerequisites are fullfilled.
---------------------------------------------------------
+4.2 Make sure the external prerequisites are fullfilled.
+----------------------------------------------------------
 See section 1.1
 
 
-3.3 Copy archive files into appropriate classpath location for Axis.
---------------------------------------------------------------------
+4.3 Copy archive files into appropriate classpath location for Axis.
+----------------------------------------------------------------------
 Suggest the best location is the webapps/axis/WEB-INF/lib directory
 that is created when Axis is installed, but any convenient place
 where they can be picked up as part of a classpath.
 
 
-3.4 READ THE JES CONFIGURATION PROPERTIES FILE.
+4.4 READ THE JES CONFIGURATION PROPERTIES FILE.
 -------------------------------------------------------
 Look in the config directory.
 
 
-3.4 Fullfill Database conditions.
----------------------------------
+4.4 Fullfill Database conditions.
+-----------------------------------
 . Create job database by running script held in dbscripts directory.
   This may <<will>> require alteration for your flavour of RDBMS.
 . Alter Tomcat and Axis files to allow for JNDI (see section 2.2 above)
 
 
-3.5 Alter the JES configuration file.
+4.5 Alter the JES configuration file.
 ----------------------------------------------
 . You must make appropriate database configuration details and other
   items available by altering this file. ***Please read it***.
 . Place the configuration file and the messages file in a convenient
-  classpath-aware location. See section 3.3 above.
+  classpath-aware location. See section 4.3 above.
 
 
-3.6 Ensure Database, Tomcat and Axis are running.
--------------------------------------------------
-You may have to restart Tomcat after step 3.4
+4.6 Ensure Database, Tomcat and Axis are running.
+---------------------------------------------------
+You may have to restart Tomcat after step 4.4
 
 
-3.7 Deploy JES as three SOAP service within Axis.
-----------------------------------------------------
+4.7 Deploy JES as three SOAP service within Axis.
+------------------------------------------------------
 See the wsdd descriptors within the wsdd directory.
 You must deploy the three JES subcomponents:
 . JobController
@@ -178,5 +193,5 @@ The files are commented to show which command is required to execute deployment.
 The jesBIN.jar must be available when the command is executed. 
 
 
-3.8 You are ready to go! Happy Astronomical Hunting!
-----------------------------------------------------
+4.8 You are ready to go! Happy Astronomical Hunting!
+------------------------------------------------------
